--- a/app/src/main/res/layout/boards_fragment.xml
+++ b/app/src/main/res/layout/boards_fragment.xml
@@ -26,4 +26,15 @@
         app:layout_constraintBottom_toBottomOf="@+id/boards_rv"
         app:layout_constraintEnd_toEndOf="@+id/boards_rv" />
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
