--- a/app/src/main/res/layout/boards_fragment.xml
+++ b/app/src/main/res/layout/boards_fragment.xml
@@ -5,15 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/boards_rv"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/boards_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/board_add_btn"
@@ -23,8 +31,8 @@
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_baseline_add_24px"
         app:fabSize="normal"
-        app:layout_constraintBottom_toBottomOf="@+id/boards_rv"
-        app:layout_constraintEnd_toEndOf="@+id/boards_rv" />
+        app:layout_constraintBottom_toBottomOf="@+id/swipe_refresh_layout"
+        app:layout_constraintEnd_toEndOf="@+id/swipe_refresh_layout" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
