--- a/app/src/main/res/layout/board_item.xml
+++ b/app/src/main/res/layout/board_item.xml
@@ -22,6 +22,14 @@
         app:layout_constraintTop_toTopOf="parent"
         android:background="@android:color/darker_gray">
 
+        <ImageView
+            android:id="@+id/admin_logo_iv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_person_24px"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp" />
+
         <TextView
             android:id="@+id/board_name_tv"
             android:layout_marginTop="8dp"
