--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#BEE3DB</color>
+    <color name="colorPrimaryDark">#89B0AE</color>
+    <color name="colorAccent">#FFD6BA</color>
+
+    <color name="dark_blue">#153243</color>
+    <color name="light_blue">#284B63</color>
 </resources>
