--- a/app/src/main/res/layout/action_item_layout.xml
+++ b/app/src/main/res/layout/action_item_layout.xml
@@ -16,7 +16,8 @@
         android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="TextView"
+        android:textSize="16sp"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
