--- a/app/src/main/res/layout/boards_fragment.xml
+++ b/app/src/main/res/layout/boards_fragment.xml
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_baseline_add_24px"
+        app:srcCompat="@drawable/ic_baseline_add_24px"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="@+id/swipe_refresh_layout"
         app:layout_constraintEnd_toEndOf="@+id/swipe_refresh_layout" />
