app logo, splash screen added, MVP suffix removed

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#BEE3DB</color>
-    <color name="colorPrimaryDark">#89B0AE</color>
-    <color name="colorAccent">#FFD6BA</color>
+    <color name="colorPrimary">#607D8B</color>
+    <color name="colorPrimaryDark">#455A64</color>
+    <color name="colorAccent">#FF9800</color>
 
     <color name="dark_blue">#153243</color>
     <color name="light_blue">#284B63</color>
