--- a/app/src/main/res/layout/activity_board_add.xml
+++ b/app/src/main/res/layout/activity_board_add.xml
@@ -66,9 +66,11 @@
                 android:id="@+id/sprint_start_date_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?selectableItemBackgroundBorderless"
+                android:background="?selectableItemBackground"
                 android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp">
 
                 <TextView
                     android:id="@+id/sprint_start_date_tv"
